# app-ipsec-policy-operator

./: .gitreview  .zuul.yaml  HACKING.rst  debian_bullseye_pkg_dirs_std  debian_pkg_dirs  debian_stable_docker_images.inc  debian_trixie_iso_image_std.inc
ipsec-policy-agent-operator/: .golangci.yml  Dockerfile  Makefile  PROJECT  README.md  go.mod  go.sum
ipsec-policy-agent-operator/cmd/: main.go
ipsec-policy-agent-operator/config/default/: kustomization.yaml  manager_auth_proxy_patch.yaml
ipsec-policy-agent-operator/config/manager/: manager.yaml  (+1 more)
ipsec-policy-agent-operator/debian/: stx-ipsec-policy-agent-operator.stable_docker_image
ipsec-policy-manager-operator/: Dockerfile  Makefile  PROJECT  README.md  go.mod  go.sum
ipsec-policy-manager-operator/cmd/: main.go
ipsec-policy-manager-operator/debian/: stx-ipsec-policy-manager-operator.stable_docker_image
python3-k8sapp-ipsec-policy-operator/k8sapp_ipsec_policy_operator/: .stestr.conf  LICENSE  README.rst  setup.cfg  setup.py  tox.ini
python3-k8sapp-ipsec-policy-operator/k8sapp_ipsec_policy_operator/k8sapp_ipsec_policy_operator/common/: constants.py
python3-k8sapp-ipsec-policy-operator/k8sapp_ipsec_policy_operator/k8sapp_ipsec_policy_operator/helm/: ipsec_policy_agent.py  ipsec_policy_manager.py
python3-k8sapp-ipsec-policy-operator/k8sapp_ipsec_policy_operator/k8sapp_ipsec_policy_operator/lifecycle/: lifecycle_ipsec_policy_operator.py
python3-k8sapp-ipsec-policy-operator/k8sapp_ipsec_policy_operator/k8sapp_ipsec_policy_operator/tests/: test_plugins.py
test-app/: README.txt  webserver_client.yml
(+135 files in other folders)
