[metadata]
name = k8sapp-ipsec-policy-operator
summary = StarlingX IPsec Policy Operator
long_description = file: README.rst
long_description_content_type = text/x-rst
license = Apache 2.0
author = StarlingX
author-email = starlingx-discuss@lists.starlingx.io
home-page = https://www.starlingx.io/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    k8sapp_ipsec_policy_operator

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
systemconfig.helm_applications =
    ipsec-policy-operator = systemconfig.helm_plugins.ipsec_policy_operator

systemconfig.helm_plugins.ipsec_policy_operator =
    001_ipsec-policy-manager = k8sapp_ipsec_policy_operator.helm.ipsec_policy_manager:IPsecPolicyManagerHelm
    002_ipsec-policy-agent = k8sapp_ipsec_policy_operator.helm.ipsec_policy_agent:IPsecPolicyAgentHelm

systemconfig.app_lifecycle =
    ipsec-policy-operator = k8sapp_ipsec_policy_operator.lifecycle.lifecycle_ipsec_policy_operator:IPsecPolicyOperatorAppLifecycleOperator

[bdist_wheel]
universal = 1
